# opencv-tesseract

./: CMakeLists.txt  CMakeLists.txt.bak  README.md  makefile  opencv-tesseract.cpp
